--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <header>
-    <div class="icons"><a href="https://twitter.com/Goldi69s" target="_blank"><i class="fa fa-twitter"></i></a><a href="https://dribbble.com/kuon_yagi" target="_blank"><i class="fa fa-dribbble"></i></a><a href="https://www.wantedly.com/users/48483598" target="_blank">Wantedly</a></div>
+    <div class="icons"><a href="https://twitter.com/MrS4nty" target="_blank"><i class="fa fa-twitter"></i></a><a href="https://instagram.com/MrS4nty" target="_blank"><i class="fa fa-instagram"></i></a></div>
     </header>
     <div class="content">
         <input class="menu-icon" type="checkbox" id="menu-icon" name="menu-icon" />
