--- a/index.html
+++ b/index.html
@@ -1,32 +1,27 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
+<html lang="en"><head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-    <title>My Info</title>
-</head>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.6/css/all.css">
+    <title>PORTFOLIO</title>
+    </head>
+  <body>
+    <header><a class="name" href="#">MrS4nty</a>
+      <div class="wrap">
+        <div class="icons"><a href="https://twitter.com/MrS4nty" target="_blank"><i class="fab fa-twitter"></i></a><a href="https://instagram.com/MrS4nty" target="_blank"><i class="fab fa-instagram"></i></a><a href="https://www.codepen.io/MrS4nty" target="_blank">Codepen</a></div>
+      </div>
+      <input class="menu-icon" type="checkbox" id="menu-icon" name="menu-icon" />
+      <label for="menu-icon"></label>
+      <nav class="nav">
+          <ul class="pt-5">
+              <li><a href="#">Home</a></li>
+              <li><a href="./Projects/index.html">Projects</a></li>
+              <li><a href="./works/index.html">Works</a></li>
+              <li><a href="./about/index.html">About</a></li>
+          </ul>
+      </nav>
+      </header>
 
-<body>
-    <header>
-    <div class="icons"><a href="https://twitter.com/MrS4nty" target="_blank"><i class="fa fa-twitter"></i></a><a href="https://instagram.com/MrS4nty" target="_blank"><i class="fa fa-instagram"></i></a></div>
-    </header>
-    <div class="content">
-        <input class="menu-icon" type="checkbox" id="menu-icon" name="menu-icon" />
-        <label for="menu-icon"></label>
-        <nav class="nav">
-            <ul class="pt-5">
-                <li><a href="#">Home</a></li>
-                <li><a href="./Projects/index.html">Projects</a></li>
-                <li><a href="./works/index.html">Works</a></li>
-                <li><a href="./about/index.html">About</a></li>
-            </ul>
-        </nav>
-    </div>
-    <script src="./js/script.js"></script>
 </body>
-
 </html>
