--- a/works/index.html
+++ b/works/index.html
@@ -16,9 +16,9 @@
         <nav class="nav">
             <ul class="pt-5">
                 <li><a href="../index.html">Home</a></li>
-                <li><a href="./Projects/index.html">Projects</a></li>
+                <li><a href="../Projects/index.html">Projects</a></li>
                 <li><a href="#">Works</a></li>
-                <li><a href="./about/index.html">About</a></li>
+                <li><a href="../about/index.html">About</a></li>
             </ul>
         </nav>
     </div>
