--- a/about/index.html
+++ b/about/index.html
@@ -16,8 +16,8 @@
         <nav class="nav">
             <ul class="pt-5">
                 <li><a href="../index.html">Home</a></li>
-                <li><a href="./Projects/index.html">Projects</a></li>
-                <li><a href="./works/index.html">Works</a></li>
+                <li><a href="../Projects/index.html">Projects</a></li>
+                <li><a href="../works/index.html">Works</a></li>
                 <li><a href="#">About</a></li>
             </ul>
         </nav>
