--- a/Projects/index.html
+++ b/Projects/index.html
@@ -17,8 +17,8 @@
             <ul class="pt-5">
                 <li><a href="../index.html">Home</a></li>
                 <li><a href="#">Projects</a></li>
-                <li><a href="./works/index.html">Works</a></li>
-                <li><a href="./about/index.html">About</a></li>
+                <li><a href="../works/index.html">Works</a></li>
+                <li><a href="../about/index.html">About</a></li>
             </ul>
         </nav>
     </div>
